--- a/angular.json
+++ b/angular.json
@@ -11,11 +11,11 @@
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:application",
+          "builder": "@angular-devkit/build-angular:browser",
           "options": {
             "outputPath": "dist/frontend",
             "index": "src/index.html",
-            "browser": "src/main.ts",
+            "main": "src/main.ts",
             "polyfills": [
               "zone.js"
             ],
@@ -60,9 +60,6 @@
             "production": {
               "buildTarget": "frontend:build:production"
             },
-            "options": {
-              "proxyConfig": "src/proxy.conf.json"
-          },
             "development": {
               "buildTarget": "frontend:build:development"
             }
